<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin_my"
    android:paddingLeft="@dimen/activity_horizontal_margin_my"
    android:paddingRight="@dimen/activity_horizontal_margin_my"
    android:paddingTop="@dimen/activity_vertical_margin_my"

    tools:context="com.fert.mike.mycalculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="75dip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="#ffffff"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="#ffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"></RelativeLayout>

    <Button
        style="@style/Buttons"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        android:text="@string/num1"
        android:id="@+id/button1"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentTop="false" />

    <Button
        style="@style/Buttons"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        android:text="@string/num2"
        android:id="@+id/button2"
        android:layout_below="@+id/textView2"
        android:layout_toEndOf="@+id/button1" />

    <Button
        style="@style/Buttons"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        android:text="@string/num3"
        android:id="@+id/button3"
        android:layout_alignTop="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

    <Button
        style="@style/Buttons"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        android:text="@string/num4"
        android:id="@+id/button4"
        android:layout_below="@+id/button1"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/Buttons"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        android:text="@string/num5"
        android:id="@+id/button5"
        android:layout_below="@+id/button1"
        android:layout_toEndOf="@+id/button1" />

    <Button
        style="@style/Buttons"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        android:text="@string/num6"
        android:id="@+id/button6"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        style="@style/Buttons"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        android:text="@string/num7"
        android:id="@+id/button7"
        android:layout_below="@+id/button4"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/Buttons"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        android:text="@string/num8"
        android:id="@+id/button8"
        android:layout_alignTop="@+id/button7"
        android:layout_alignStart="@+id/button5" />

    <Button
        style="@style/Buttons"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        android:text="@string/num9"
        android:id="@+id/button9"
        android:layout_below="@+id/button5"
        android:layout_toEndOf="@+id/button5" />

    <Button
        style="@style/Buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size2"
        android:text="@string/clear"
        android:id="@+id/button10"
        android:layout_below="@+id/textView2"
        android:layout_toEndOf="@+id/button3" />

    <Button
        style="@style/Buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size2"
        android:text="@string/div"
        android:id="@+id/button11"
        android:layout_below="@+id/button10"
        android:layout_toEndOf="@+id/button3" />

    <Button
        style="@style/Buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size2"
        android:text="@string/mult"
        android:id="@+id/button12"
        android:layout_below="@+id/button11"
        android:layout_toEndOf="@+id/button6" />

    <Button
        style="@style/Buttons"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        android:text="@string/dec"
        android:id="@+id/button15"
        android:layout_below="@+id/button7"
        android:layout_alignStart="@+id/button7" />

    <Button
        style="@style/Buttons"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        android:text="@string/num0"
        android:id="@+id/button0"
        android:layout_below="@+id/button7"
        android:layout_toEndOf="@+id/button15" />

    <Button
        style="@style/Buttons"
        android:layout_width="@dimen/size"
        android:layout_height="@dimen/size"
        android:text="@string/equals"
        android:id="@+id/button16"
        android:layout_below="@+id/button8"
        android:layout_toEndOf="@+id/button0" />



    <Button
        style="@style/Buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size2"
        android:text="@string/sub"
        android:id="@+id/button13"
        android:layout_below="@+id/button12"
        android:layout_toEndOf="@+id/button9" />

    <Button
        style="@style/Buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/sum"
        android:id="@+id/button14"
        android:layout_below="@+id/button13"
        android:layout_toEndOf="@+id/button16" />

</RelativeLayout>
